<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="64dp"
            android:paddingRight="32dp"
            android:paddingBottom="32dp"
            android:paddingLeft="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/practiceVoiceLabel"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToVoice"
                android:text="@string/practiceVoiceButton"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/whiteColor" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/practiceWritingLabel"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToWriting"
                android:text="@string/practiceWritingButton"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/whiteColor" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/runDemoLabel"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToDemo"
                android:text="@string/runDemoButton"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/whiteColor" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>